initial gitcoin desktop commit

--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "electron-quick-start",
+  "name": "gitcoin-desktop",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A Gitcoin Desktop app",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/gitcoinco/desktop-app",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "Gitcoin",
+    "Desktop",
+    "Chat",
+    "Ethereum",
+    "Desktop"
   ],
-  "author": "GitHub",
+  "author": "Gitcoin",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^7.1.7"
+    "electron": "^7.1.7",
+    "electron-packager": "^14.1.1"
   }
 }
